@@ -40,7 +40,9 @@
 <ul class="simple">
 <li>magick/log.c (LogMagickEventList): Prepare source module base
 name more efficiently.  Move MethodOutput implementation to the
-front so it is not filtered by other active blocks.</li>
+front so it is not filtered by other active blocks.
+(LogMagickEventList): Cache broken-down time structure in LogInfo
+and recompute only when needed.</li>
 </ul>
 </blockquote>
 <p>2020-03-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
